feat: implement Fluo social app and media
